// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichTextElement/> Complex rich-text value - render properly no resolution 1`] = `
<div>
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0f6785d7-8214-000f-62b3-d9580d692b59/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>
  

  <p>
    He likes to do web sites. This is his latest project:
  </p>
  

  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>
  

  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>
  

  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>
  

  <p>
    Check out also this interesting repository
  </p>
  

  <object
    data-codename="n5b76e971_4709_01f2_e8ea_36a9716d7b42"
    data-rel="component"
    data-type="item"
    type="application/kenticocloud"
  />
</div>
`;

exports[`<RichTextElement/> Empty rich-text value - render properly 1`] = `
<div>
  <p>
    <br />
  </p>
</div>
`;

exports[`<RichTextElement/> Resolve geneal node - wrap table element 1`] = `
<div>
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0f6785d7-8214-000f-62b3-d9580d692b59/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>
  

  <p>
    He likes to do web sites. This is his latest project:
  </p>
  

  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>
  

  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>
  

  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>
  

  <p>
    Check out also this interesting repository
  </p>
  

  <object
    data-codename="n5b76e971_4709_01f2_e8ea_36a9716d7b42"
    data-rel="component"
    data-type="item"
    type="application/kenticocloud"
  />
</div>
`;

exports[`<RichTextElement/> Resolve images 1`] = `
<div>
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>
  <img
    alt="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    src="https://assets-us-01.kc-usercontent.com:443/0f6785d7-8214-000f-62b3-d9580d692b59/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    width="200"
  />
  

  <p>
    He likes to do web sites. This is his latest project:
  </p>
  

  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>
  

  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>
  

  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>
  

  <p>
    Check out also this interesting repository
  </p>
  

  <object
    data-codename="n5b76e971_4709_01f2_e8ea_36a9716d7b42"
    data-rel="component"
    data-type="item"
    type="application/kenticocloud"
  />
</div>
`;

exports[`<RichTextElement/> Resolve linked items from richText element with richText containing multiple level of linked items does not resolve lower level without linkedItems attribute 1`] = `
<div>
  <div
    className="row"
  >
    <div>
      <div
        className="column"
      >
        <div>
          <p>
            First column
          </p>
        </div>
      </div>
      <div
        className="column"
      >
        <div>
          <p>
            Second column
          </p>
        </div>
      </div>
      

      <div
        className="column"
      >
        <div>
          <p>
            Third column
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RichTextElement/> Resolve linked items from richText element with richText containing single level of linked items 1`] = `
<div>
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0f6785d7-8214-000f-62b3-d9580d692b59/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>
  

  <p>
    He likes to do web sites. This is his latest project:
  </p>
  

  <h1>
    Linked item
  </h1>
  <pre>
    {
  "elements": {
    "name": {
      "name": "Name",
      "type": "text",
      "value": "ondrej.chrastina.tech"
    },
    "summary": {
      "name": "Summary",
      "type": "text",
      "value": "Ondřej Chrastina's personal site"
    },
    "url": {
      "name": "URL",
      "type": "text",
      "value": "https://ondrej.chrastina.tech"
    },
    "slug": {
      "name": "Slug",
      "type": "url_slug",
      "value": "ondrej-chrastina-tech"
    },
    "source_repository": {
      "name": "Source repository",
      "type": "modular_content",
      "value": [
        "simply007_simply007_github_io"
      ],
      "linkedItems": []
    }
  },
  "system": {
    "codename": "ondrej_chrastina_tech",
    "collection": "default",
    "id": "884bd3cf-98b6-438e-b50d-a593a3bad623",
    "language": "default",
    "lastModified": "2020-08-14T13:18:13.858424Z",
    "name": "ondrej.chrastina.tech",
    "sitemapLocations": [],
    "type": "website",
    "workflowStep": "published"
  }
}
  </pre>
  ;
  

  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>
  

  <h1>
    Linked item
  </h1>
  <pre>
    {
  "elements": {
    "name": {
      "name": "Name",
      "type": "text",
      "value": "Simply007/kontent-gatsby-benchmark"
    },
    "summary": {
      "name": "Summary",
      "type": "text",
      "value": "Example site for Kontent as a source for \\"Will It Build\\". Should/Will be generalized into e.g. a theme."
    },
    "url": {
      "name": "URL",
      "type": "text",
      "value": "https://github.com/Simply007/kontent-gatsby-benchmark"
    },
    "slug": {
      "name": "Slug",
      "type": "url_slug",
      "value": "simply007-kontent-gatsby-benchmark"
    }
  },
  "system": {
    "codename": "simply007_kontent_gatsby_benchmark",
    "collection": "default",
    "id": "16ec0ca3-8525-4154-ba84-0bb7ec712bf6",
    "language": "default",
    "lastModified": "2020-08-14T12:19:40.5439642Z",
    "name": "Simply007/kontent-gatsby-benchmark",
    "sitemapLocations": [],
    "type": "repository",
    "workflowStep": "published"
  }
}
  </pre>
  ;
  

  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>
  

  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>
  

  <p>
    Check out also this interesting repository
  </p>
  

  <h1>
    Component
  </h1>
  <pre>
    {
  "elements": {
    "name": {
      "name": "Name",
      "type": "text",
      "value": "Gatsby packages repository"
    },
    "slug": {
      "name": "Slug",
      "type": "url_slug",
      "value": ""
    },
    "summary": {
      "name": "Summary",
      "type": "text",
      "value": "Gatsby packages repository containing the source plugin, components package, and a bunch of Gatsby examples."
    },
    "url": {
      "name": "URL",
      "type": "text",
      "value": "https://github.com/Kentico/kontent-gatsby-packages"
    }
  },
  "system": {
    "codename": "n5b76e971_4709_01f2_e8ea_36a9716d7b42",
    "collection": "default",
    "id": "5b76e971-4709-01f2-e8ea-36a9716d7b42",
    "language": "default",
    "lastModified": "2022-02-14T09:33:27.4528882Z",
    "name": "5b76e971-4709-01f2-e8ea-36a9716d7b42",
    "sitemapLocations": [],
    "type": "repository",
    "workflowStep": null
  }
}
  </pre>
  ;
</div>
`;

exports[`<RichTextElement/> Resolve links 1`] = `
<div>
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0f6785d7-8214-000f-62b3-d9580d692b59/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>
  

  <p>
    He likes to do web sites. This is his latest project:
  </p>
  

  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>
  

  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />
  

  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      href="/person/john-doe"
    >
      John Doe
    </a>
    .
  </p>
  

  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>
  

  <p>
    Check out also this interesting repository
  </p>
  

  <object
    data-codename="n5b76e971_4709_01f2_e8ea_36a9716d7b42"
    data-rel="component"
    data-type="item"
    type="application/kenticocloud"
  />
</div>
`;

exports[`<RichTextElement/> Resolve links 2`] = `
<div>
  <p>
    This is the page text.
  </p>
  <ul>
    <li>
      <a
        href="/page/test-nico"
      >
        Test link
      </a>
    </li>
  </ul>
</div>
`;

exports[`<RichTextElement/> Simple rich-text value resolved simple dom node properly 1`] = `
<div>
  <p>
    Lorem ipsum with 
    <b>
      bold text
    </b>
  </p>
</div>
`;
